--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>spring_rest_client</groupId>
-    <artifactId>com.vgherta.spring.rest</artifactId>
+    <artifactId>com.spring.rest</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>com.vgherta.spring.rest</name>
+    <name>com.spring.rest</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -50,11 +50,23 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.24</version>
+        <scope>provided</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>2.14.1</version>
+    </dependency>
     </dependencies>
 
     <build>
